--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+.idea/inspectionProfiles/
+src/main/resources/
+target/generated-sources/
+target/generated-test-sources/
